<resources>
    <!-- general -->
    <string name="delete_message">Wirklich löschen?</string>
    <string name="leave_message">Wirklich verlassen?</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="saved_hash">Saved Hash</string>
    <string name="saved_salt">Saved Salt</string>
    <string name="saved_user_id">Saved UserId</string>
    <string name="app_name">Travel\nTogether</string>
    <string name="logo_description">TravelTogether Logo</string>
    <string name="please_wait">Bitte warten ...</string>
    <string name="please_choose">Bitte wählen ...</string>
    <string name="is_loading">&#160;wird geladen...</string>
    <string name="success_change">Erfolgreich geändert.</string>
    <string name="no_entries">Keine Einträge vorhanden</string>
    <string name="change_profile">Daten ändern</string>
    <string name="change_pw">Passwort ändern</string>
    <string name="cancel">Abbrechen</string>
    <string name="no_description">Keine Beschreibung</string>
    <string name="no_destination">Kein Ort</string>
    <string name="mandatory">Pflichtfeld</string>
    <string name="missing_title">Bitte gib einen Titel für deine %1$s ein</string>
    <string name="missing_title_male">Bitte gib einen Titel für dein %1$s ein</string>
    <string name ="sorry">Sorry</string>
    <string name="error">Etwas ist schiefgelaufen.</string>
    <string name="ok">OK</string>
    <string name="deleting_not_allowed">Nur der Ersteller dieser %1$s darf die %1$s löschen.</string>
    <string name="deleting_not_allowed_thing">Nur der Ersteller dieses %1$s darf das %1$s löschen.</string>


    <!-- ChatActivity -->
    <string name="comment">Kommentieren</string>
    <string name="chat">Chat</string>
    <string name="load_comments">Nachrichten werden geladen</string>

    <!-- LoginActivity -->
    <string name="login">Anmelden</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Passwort</string>
    <string name="no_account">Noch kein Account?</string>
    <string name="account_exists">Bereits registriert?</string>
    <string name="sign_up">Registrieren</string>
    <string name="name">Name</string>
    <string name="repeat_password">Passwort wiederholen</string>
    <string name="forgot_password">Passwort vergessen</string>
    <string name="login_success">Erfolgreich angemeldet.</string>
    <string name="login_error">Fehler beim anmelden. Bitte versuche es erneut.</string>
    <string name="forgot_pw_title">E-Mail eingeben</string>
    <string name="forgot_pw_text">Gib deine E-Mail Adresse ein und wir senden dir dein neues Passwort zu.</string>
    <string name="edits_wrong">Benutzername oder Passwort sind nicht korrekt.</string>

    <!-- RegistrationActivity -->
    <string name="pw_minimum_length">Das Passwort muss aus mindestens 7 Zeichen bestehen.</string>
    <string name="pw_repeat_error">Die eingegebenen Passwörter stimmen nicht überein.</string>
    <string name="invalid_mailadress">Bitte gib eine gültige Mail Adresse ein um dich zu registrieren.</string>
    <string name="register_success">Erfolgreich registriert.</string>
    <string name="mail_was_sent">Eine E-Mail mit dem Bestätigungslink wurde an dich vesendet.</string>

    <!-- TripListActivity-->
    <string name="my_trips">Meine Reisen</string>
    <string name="trip">Reise</string>
    <string name="newtrip_success">Reise wurde erstellt.</string>
    <string name="trip_delete">Reise löschen</string>
    <string name="trip_deleted">Reise gelöscht.</string>
    <string name="trip_delete_warning">Möchtest du die Reise wirklich löschen?</string>
    <string name="change_admin">Administrator ändern</string>
    <string name="leave_trip">Reise verlassen</string>
    <string name="leave_trip_warning">Möchtest du die Reise wirklich verlassen?</string>
    <string name="leave_trip_success">Du hast die Reise erfolgreich verlassen.</string>
    <string name="trip_load">Reisen werden geladen...</string>
    <string name="leave_text">Möchtest du die Reise wirklich verlassen?</string>

    <!-- OptionsActivity -->
    <string name="options">Optionen</string>
    <string name="profile">Profil</string>
    <string name="edit">Bearbeiten</string>
    <string name="delete">Löschen</string>
    <string name="notifications">Benachrichtigungen</string>
    <string name="loading_notifications">Benachrichtigungen werden geladen...</string>
    <string name="on">an</string>
    <string name="off">aus</string>
    <string name="delete_account">Account löschen</string>
    <string name="logout">Abmelden</string>

    <!-- NewTripActivity -->
    <string name="new_trip">Neue Reise</string>
    <string name="title">Titel</string>
    <string name="add_fellow_passengers">Mitreisende hinzufügen</string>
    <string name="invite_friends">Freunde einladen</string>

    <!-- InvitationActivity -->
    <string name="invited_to_trip">%1$s hat dich eingeladen der Reise %2$s beizutreten</string>
    <string name="join">Beitreten</string>
    <string name="decline">Ablehnen</string>
    <string name="invitation_text">Du wurdest eingeladen, an einer TravelTogether Reise teilzunehmen. https://www.druckstdu.de/?</string>
    <string name="title_invititation_choose">Andere zur Reise einladen</string>
    <string name="invite_success">Erfolgreich eingeladen</string>
    <string name="invitation">Einladung</string>

    <!-- MainMenuActivity -->
    <string name="progress">Fortschritt</string>
    <string name="days_left">noch %1$d Tage</string>
    <string name="weeks_left">noch %1$d Wochen</string>
    <string name="months_left">noch %1$d Monate</string>
    <string name="delete_trip_success">Die Reise wurde erfolgreich gelöscht.</string>

    <!-- InfoActivity -->
    <string name="trip_information">Reiseinfo</string>
    <string name="edit_trip">Reiseinfo bearbeiten</string>
    <string name="start_date">Start</string>
    <string name="end_date">Ende</string>
    <string name="fellow_passengers">Mitreisende</string>
    <string name="invited">Ausstehend</string>

    <!-- NewInfoActivity -->
    <string name="destination">Ort</string>
    <string name="description">Beschreibung</string>

    <!-- ExpensesActivity -->
    <string name="costs">Kosten</string>
    <string name="new_expense">Neue Ausgabe</string>
    <string name="account_balances">Kontoübersicht</string>
    <string name="expenses">Ausgaben</string>
    <string name = "expense">Ausgabe</string>
    <string name = "edit_expense">Ausgabe bearbeiten</string>
    <string name="payed">bezahlt von</string>
    <string name="share_with">teilen mit</string>
    <string name="title_expense">Wer bezahlt mit?</string>
    <string name="add_expense">Klicke hier, um eine neue Ausgabe hinzuzufügen.</string>
    <string name="mandatory_expense">Bitte gib einen Titel und Betrag für deine Ausgabe ein.</string>
    <string name="expense_deleted">Diese Ausgabe wurde gelöscht.</string>
    <string name="added_expense">Ausgabe erfolgreich hinzugefüft.</string>
    <string name="updated_expense">Ausgabe geändert.</string>
    <string name="expense_deleted_success">Ausgabe erfolgreich gelöscht.</string>

    <!--ActivityActivity -->
    <string name="activity">Aktivität</string>
    <string name="deleted_activity">Diese Aktivität wurde gelöscht.</string>
    <string name="deleted_activity_success">Aktivität erfolgreich gelöscht.</string>

    <!-- TasksActivity -->
    <string name="tasks">Aufgaben</string>
    <string name="task">Aufgabe</string>
    <string name="task_edit">Aufgabe bearbeiten</string>
    <string name="new_task">Neue Aufgabe</string>
    <string name="add_task">Klicke hier, um eine neue Aufgabe zu erstellen.</string>
    <string name="add_person">Person zuordnen</string>
    <string name="status">Status</string>
    <string name="open">Offen</string>
    <string name="in_progress">In Bearbeitung</string>
    <string name="done">Erledigt</string>
    <string name="task_added">Aufgabe hinzugefügt</string>
    <string name="task_updated">Aufgabe aktualisiert</string>
    <string name="task_deleted">Aufgabe wurde gelöscht</string>
    <string name="task_delete_warning">Löschen nur durch Author möglich</string>

    <!-- PackingsListActivity -->
    <string name="packinglist">Packliste</string>
    <string name="packingitem">Packelement</string>
    <string name="edit_packingitem">Packelement bearbeiten</string>
    <string name="add_packing_object">Klicke hier, um etwas zur Packliste hinzuzufügen.</string>
    <string name="new_category">Neue Kategorie</string>
    <string name="add_to_category">Zu Kategorie hinzufügen</string>
    <string name="deleted_packingitem">Dieses Packelement wurde gelöscht.</string>
    <string name="deleted_packingitem_success">Packelement erfolgreich gelöscht.</string>
    <string name="add_packingitem_success">Packelement erfolgreich hinzugefügt.</string>
    <string name="who_packs">Wer packt ein?</string>

    <!-- SettingsActivity -->
    <string name="load_data">Daten werden geladen...</string>
    <string name="my_profile">Mein Profil</string>


</resources>
