<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.traveltogether.register.RegisterActivity"
    android:background="#37a9e3">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="false" >

        <ImageView
            android:layout_width="240dp"
            android:layout_height="fill_parent"
            android:id="@+id/registerLogo"
            android:src="@mipmap/logo_mit_schrift"
            android:layout_weight="1.2"
            android:layout_gravity="center_horizontal"
            android:paddingTop="20pt"
            android:contentDescription="@string/logo_description" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:paddingTop="10pt"
            android:id="@+id/RegisterForm">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:id="@+id/RegisterInput">

                <EditText
                    android:layout_width="240dp"
                    android:layout_height="45dp"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/registerName"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="#ffffff"
                    android:textColor="#ffffff"
                    android:hint="@string/name"
                    android:textColorHint="#ffffff"
                    android:textSize="14dp" />

                <EditText
                    style="color"
                    android:layout_width="240dp"
                    android:layout_height="45dp"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/registerEmail"
                    android:hint="@string/e_mail"
                    android:textColor="#ffffff"
                    android:textColorHint="#ffffff"
                    android:singleLine="false"
                    android:backgroundTint="#ffffff"
                    android:layout_gravity="center_horizontal"
                    android:textSize="14dp" />

                <EditText
                    android:layout_width="240dp"
                    android:layout_height="45dp"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/registerPassword"
                    android:hint="@string/password"
                    android:backgroundTint="#ffffff"
                    android:textColorHint="#ffffff"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#ffffff"
                    android:textSize="14dp" />


                <EditText
                    android:layout_width="240dp"
                    android:layout_height="45dp"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/registerPassword_repeat"
                    android:hint="@string/repeat_password"
                    android:backgroundTint="#ffffff"
                    android:textColorHint="#ffffff"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#ffffff"
                    android:textSize="14dp" />

            </LinearLayout>

            <Button
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:id="@+id/activity_register_button_register"
                android:background="#37a9e3"
                android:textColor="#ffffff"
                android:textSize="18dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textAlignment="center"
                android:gravity="center|bottom"
                android:layout_gravity="bottom"
                android:id="@+id/RegisterText">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/account_exists"
                    android:id="@+id/login_Text1"
                    android:textColor="#ffffff"
                    android:gravity="center|bottom"
                    android:layout_gravity="bottom" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/login"
                    android:id="@+id/activity_register_button_login"
                    android:gravity="center|bottom"
                    android:textColor="#255fb6"
                    android:paddingStart="2pt"
                    android:layout_gravity="bottom" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
